[gd_scene load_steps=23 format=3 uid="uid://bmbgmx6hbddg3"]

[ext_resource type="Material" uid="uid://ck16v7kivvfq6" path="res://miniGame/Materials/GrayGridMaterial.tres" id="1_k2f2a"]
[ext_resource type="Material" uid="uid://pyue2l6n7crf" path="res://miniGame/Materials/OrangeMaterial.tres" id="2_d1jr8"]
[ext_resource type="Script" path="res://Scripts/CameraController.gd" id="2_fkkta"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="2_i461g"]
[ext_resource type="PackedScene" uid="uid://cw4p6bc15gkbx" path="res://miniGame/Scenes/pickup_item_type_0.tscn" id="5_l3k1m"]
[ext_resource type="PackedScene" uid="uid://bgrvqcbv08e5a" path="res://miniGame/Scenes/pickup_item_type_1.tscn" id="6_e6fc3"]
[ext_resource type="PackedScene" uid="uid://wvxt37pj21h5" path="res://miniGame/Scenes/pickup_item_type_2.tscn" id="7_yucsb"]
[ext_resource type="Script" path="res://Scripts/ItemSpawner.gd" id="8_bgew3"]
[ext_resource type="Texture2D" uid="uid://cwryxhf1wme67" path="res://assets/textures/image(2).png" id="9_mymv5"]
[ext_resource type="Script" path="res://floor_check.gd" id="13_j6qaq"]
[ext_resource type="AudioStream" uid="uid://ddrxbb8nt3p06" path="res://assets/sounds/Icy crunch loop.wav" id="14_5r2ny"]

[sub_resource type="BoxMesh" id="BoxMesh_sriop"]
size = Vector3(100, 1, 100)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_37r2e"]
points = PackedVector3Array(-50, -0.5, -50, -50, 0.5, -50, 50, -0.5, -50, -50, -0.5, 50, -50, 0.5, 50, 50, 0.5, -50, 50, -0.5, 50, 50, 0.5, 50)

[sub_resource type="BoxMesh" id="BoxMesh_6owly"]
size = Vector3(100, 10, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_8emen"]
points = PackedVector3Array(50, 5, 0.5, 50, 5, -0.5, -50, 5, 0.5, 50, -5, 0.5, 50, -5, -0.5, -50, 5, -0.5, -50, -5, 0.5, -50, -5, -0.5)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6kb5g"]

[sub_resource type="Sky" id="Sky_15oek"]
sky_material = SubResource("ProceduralSkyMaterial_6kb5g")

[sub_resource type="Environment" id="Environment_aqqi7"]
background_mode = 2
sky = SubResource("Sky_15oek")

[sub_resource type="SphereMesh" id="SphereMesh_reiq4"]
radial_segments = 16
rings = 8

[sub_resource type="SphereShape3D" id="SphereShape3D_s8exs"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8802e"]
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_46wq2"]
albedo_texture = ExtResource("9_mymv5")

[node name="GameScene" type="Node"]

[node name="ItemSpawner" type="Node" parent="." node_paths=PackedStringArray("item_parent")]
script = ExtResource("8_bgew3")
item_parent = NodePath("../Items")
item_templates = Array[PackedScene]([ExtResource("5_l3k1m"), ExtResource("6_e6fc3"), ExtResource("7_yucsb")])

[node name="ItemSpawnTimer" type="Timer" parent="ItemSpawner"]
autostart = true

[node name="invisible boundary" type="Node3D" parent="."]
transform = Transform3D(2.58266, 0, 0, 0, 1.50522, 0, 0, 0, 2.59362, 0, -68.5422, -122.914)

[node name="Ground" type="StaticBody3D" parent="invisible boundary"]

[node name="GroundMesh" type="MeshInstance3D" parent="invisible boundary/Ground"]
material_override = ExtResource("1_k2f2a")
mesh = SubResource("BoxMesh_sriop")

[node name="CollisionShape3D" type="CollisionShape3D" parent="invisible boundary/Ground"]
shape = SubResource("ConvexPolygonShape3D_37r2e")

[node name="Wall" type="StaticBody3D" parent="invisible boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -50)
visible = false

[node name="WallMesh" type="MeshInstance3D" parent="invisible boundary/Wall"]
material_override = ExtResource("1_k2f2a")
mesh = SubResource("BoxMesh_6owly")

[node name="CollisionShape3D" type="CollisionShape3D" parent="invisible boundary/Wall"]
shape = SubResource("ConvexPolygonShape3D_8emen")

[node name="Wall2" type="StaticBody3D" parent="invisible boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 50)
visible = false

[node name="WallMesh" type="MeshInstance3D" parent="invisible boundary/Wall2"]
material_override = ExtResource("1_k2f2a")
mesh = SubResource("BoxMesh_6owly")

[node name="CollisionShape3D" type="CollisionShape3D" parent="invisible boundary/Wall2"]
shape = SubResource("ConvexPolygonShape3D_8emen")

[node name="Wall3" type="StaticBody3D" parent="invisible boundary"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -50, 5, 0)
visible = false

[node name="WallMesh" type="MeshInstance3D" parent="invisible boundary/Wall3"]
material_override = ExtResource("1_k2f2a")
mesh = SubResource("BoxMesh_6owly")

[node name="CollisionShape3D" type="CollisionShape3D" parent="invisible boundary/Wall3"]
shape = SubResource("ConvexPolygonShape3D_8emen")

[node name="Wall4" type="StaticBody3D" parent="invisible boundary"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 50, 5, 0)
visible = false

[node name="WallMesh" type="MeshInstance3D" parent="invisible boundary/Wall4"]
material_override = ExtResource("1_k2f2a")
mesh = SubResource("BoxMesh_6owly")

[node name="CollisionShape3D" type="CollisionShape3D" parent="invisible boundary/Wall4"]
shape = SubResource("ConvexPolygonShape3D_8emen")

[node name="WorldEnvironment" type="WorldEnvironment" parent="invisible boundary"]
environment = SubResource("Environment_aqqi7")

[node name="Player" type="RigidBody3D" parent="." node_paths=PackedStringArray("camera_node")]
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("2_i461g")
camera_node = NodePath("../CameraPivot/Camera3D")

[node name="PlayerMesh" type="MeshInstance3D" parent="Player"]
visible = false
material_override = ExtResource("2_d1jr8")
mesh = SubResource("SphereMesh_reiq4")

[node name="PlayerCollision" type="CollisionShape3D" parent="Player"]
shape = SubResource("SphereShape3D_s8exs")

[node name="Attachments" type="Node3D" parent="Player"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
shape = SubResource("SphereShape3D_8802e")

[node name="FloorCheck" type="RayCast3D" parent="Player"]
target_position = Vector3(0, -1.25, 0)
script = ExtResource("13_j6qaq")
ball_path = NodePath("..")

[node name="snowball_model" type="CSGSphere3D" parent="Player"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_46wq2")
snap = 1e-06
radius = 1.0
radial_segments = 20
rings = 15

[node name="Rolling" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("14_5r2ny")
volume_db = -29.085

[node name="CameraPivot" type="Node3D" parent="." node_paths=PackedStringArray("player", "camera_node")]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)
script = ExtResource("2_fkkta")
player = NodePath("../Player")
camera_node = NodePath("Camera3D")

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="Items" type="Node3D" parent="."]

[node name="PickupItemType0" parent="Items" instance=ExtResource("5_l3k1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.637825, 1.5, -3.54902)

[node name="PickupItemType1" parent="Items" instance=ExtResource("5_l3k1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, -4)

[node name="PickupItemType2" parent="Items" instance=ExtResource("6_e6fc3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.60324, 1.88757, -4.43168)

[node name="PickupItemType3" parent="Items" instance=ExtResource("6_e6fc3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.36224, 1.81503, -6.80579)

[node name="PickupItemType4" parent="Items" instance=ExtResource("7_yucsb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.7805, 1.89144, -4.65721)

[node name="PickupItemType5" parent="Items" instance=ExtResource("7_yucsb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.6646, 1.73708, -7.29201)

[connection signal="timeout" from="ItemSpawner/ItemSpawnTimer" to="ItemSpawner" method="_spawn_pickup_item"]
[connection signal="body_entered" from="Player" to="Player" method="_on_body_entered"]
